# partyboy

./: .gitignore  Cargo.toml  Notes.md  README.md  TODO.md  TestReport.md  bios.dism
.config/: nextest.toml
.github/workflows/: build.yml  build_wasm_pkg.yml
benches/: Cargo.toml  benchmarks.rs
benches/src/: lib.rs
common/src/: bitpacked.rs  lib.rs  time.rs
common/src/loop_helper/: mod.rs
core/gameboy/: Cargo.toml  README.md
core/gameboy/src/: builder.rs  bus.rs  debug.rs  input.rs  interrupts.rs  lib.rs  timer.rs
core/gameboy/src/apu/: channel_2.rs  envelope.rs  frame_sequencer.rs  length.rs  mod.rs  noise_channel.rs  sample_channel.rs  square_channel.rs  sweep.rs
core/gameboy/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  rom.rs  serialize.rs
core/gameboy/src/common/: mod.rs
core/gameboy/src/cpu/: instructions.rs  mod.rs  register.rs  speed_controller.rs  tests.rs
core/gameboy/src/dma/: hdma.rs  oam.rs
core/gameboy/src/ppu/: cgb_palette.rs  mod.rs  pixel_slice_fetcher.rs  rgb.rs
core/gameboy/tests/: acid.rs  blargg.rs  mooneye.rs
core/gameboy_web/: .gitignore  Cargo.toml  README.md  README.txt
core/gameboy_web/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: emu_thread.rs  input.rs  logging.rs  main.rs  msgs.rs  render.rs
frontend_debug/: Cargo.toml
frontend_debug/src/: channel_log.rs  main.rs  messages.rs
frontend_debug/src/app/: gb_display.rs  log_window.rs  map_window.rs  menu_bar.rs  mod.rs  palette_window.rs  side_panel.rs  tile_window.rs
frontend_web/: Cargo.toml
frontend_web/assets/: sw.js
frontend_web/src/: app.rs  lib.rs  main.rs
frontends/frontend/: Cargo.toml  README.md
frontends/frontend/src/: emu_thread.rs  logging.rs  main.rs  msgs.rs
frontends/frontend_debug/src/: channel_log.rs  main.rs
frontends/frontend_debug/src/app/: palette_window.rs
frontends/frontend_web/: Cargo.toml  README.md  index.html
frontends/frontend_web/src/: gb_display.rs  lib.rs
gameboy/: Cargo.toml  build.rs
gameboy/src/: builder.rs  bus.rs  debug.rs  input.rs  interrupts.rs  lib.rs  timer.rs
gameboy/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  rom.rs
gameboy/src/common/: mod.rs
gameboy/src/cpu/: instructions.rs  mod.rs  register.rs  speed_controller.rs  tests.rs
gameboy/src/dma/: hdma.rs  mod.rs  oam.rs
gameboy/src/gameboy/: input.rs  mod.rs  timer.rs
gameboy/src/gameboy/cpu/: mod.rs
gameboy/src/ppu/: cgb_palette.rs  mod.rs  rgb.rs
gameboy/tests/: acid.rs  blargg.rs  mooneye.rs
gameboy/tests/common/: mod.rs
gameboy_web/: Cargo.toml  publish.sh
gameboy_web/.cargo/: config.toml
gameboy_web/src/: lib.rs
junit_to_md/src/: main.rs
partyboy-common/: Cargo.toml
partyboy-common/src/loop_helper/: mod.rs
partyboy-core/: Cargo.toml
partyboy-core-web/: Cargo.toml
partyboy-core-web/src/: lib.rs
partyboy-core/src/: builder.rs  bus.rs  debug.rs  input.rs  interrupts.rs  lib.rs  timer.rs
partyboy-core/src/apu/: frame_sequencer.rs  mod.rs  noise_channel.rs  sample_channel.rs  square_channel.rs  sweep.rs
partyboy-core/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  rom.rs  serialize.rs
partyboy-core/src/common/: boxed_slice.rs  d2array.rs  mod.rs
partyboy-core/src/cpu/: instructions.rs  mod.rs  register.rs  tests.rs
partyboy-core/src/cpu/instructions/: alu.rs  instruction.rs  instruction_cache.rs  mod.rs  opcodes.rs  regs.rs
partyboy-core/src/dma/: hdma.rs  mod.rs
partyboy-core/src/ppu/: cgb_palette.rs  mod.rs
partyboy-core/tests/: acid.rs  blargg.rs  mooneye.rs
partyboy-core/tests/common/: mod.rs
partyboy-disassembler/: Cargo.toml  README.md
partyboy-disassembler/src/: main.rs  opcode.rs
partyboy-disassembler/src/opcode/: condition_code.rs  mod.rs  parts.rs  register.rs  span.rs
partyboy-disassembler/src/tokenizer/: mod.rs  tokenize_cb_prefix.rs  tokenize_x_0.rs  tokenize_x_1.rs  tokenize_x_2.rs  tokenize_x_3.rs
partyboy-frontend/: Cargo.toml
partyboy-frontend-debug/: Cargo.toml  README.md
partyboy-frontend-debug/src/: main.rs  messages.rs
partyboy-frontend-debug/src/app/: gb_display.rs  map_window.rs  menu_bar.rs  mod.rs  palette_window.rs  tile_window.rs
partyboy-frontend/src/: emu_thread.rs  input.rs  logging.rs  main.rs  msgs.rs  saves.rs
partyboy-mass-runner/: Cargo.toml
partyboy-mass-runner/src/: args.rs  emulator.rs  main.rs  rom.rs  types.rs  writer.rs
partyboy-util/: Cargo.toml
partyboy-util/src/: convert_junit_to_md.rs  gen_bios_skip_snapshot.rs  main.rs
scripts/: ci.py  download_test_roms.py  generate_bios_skip_snapshot.py  test.py  test_ci.py
src/: main.rs  render.rs  util.rs
src/gameboy/: bus.rs  input.rs  interrupts.rs  mod.rs  timer.rs
src/gameboy/cartridge/: mbc1.rs  mod.rs  rom.rs
src/gameboy/cpu/: instructions.rs  mod.rs  register.rs
src/gameboy/ppu/: mod.rs
test/junit_to_md/: Cargo.toml
test/junit_to_md/src/: main.rs
test/test_roms/: README.md
util/gen_bios_skip_snapshot/: Cargo.toml
util/gen_bios_skip_snapshot/src/: main.rs
