[workspace]
members = [
    "benches",
    "frontends/frontend",
    "frontends/frontend_debug",
    "frontends/frontend_web",
    "core/gameboy",
    "test/junit_to_md",
    "util/gen_bios_skip_snapshot"
]
default-members = [
    "frontends/frontend",
    "core/gameboy",
]
exclude = [
    # for some reason it messes up intellisense if its a member
    "core/gameboy_web", 
]
resolver="2"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 3
overflow-checks = false

[profile.ci]
inherits = "dev"
opt-level = 1
