[workspace]
members = [
    "benches",
    "partyboy-common",
    "partyboy-frontend",
    "partyboy-frontend-debug",
    "partyboy-core",
    "test/junit_to_md",
    "util/gen_bios_skip_snapshot"
]
default-members = [
    "partyboy-frontend",
    "partyboy-core",
]
exclude = [
    # for some reason it messes up intellisense if its a member
    "partyboy-core-web", 
]
resolver="2"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 3
overflow-checks = false

[profile.ci]
inherits = "dev"
opt-level = 1
