[workspace]
members = [
    "partyboy-common",
    "partyboy-frontend",
    "partyboy-frontend-debug",
    "partyboy-core",
    "partyboy-util", 
    "partyboy-mass-runner"
]
default-members = [
    "partyboy-frontend",
    "partyboy-core",
]
exclude = [
    # for some reason it messes up intellisense if its a member
    "partyboy-core-web", 
]
resolver="2"

[workspace.dependencies]
boxarray = "1.3"
console_error_panic_hook = "0.1"
criterion = "0.8"
image = "0.25"
log = "0.4"
paste = "1.0"
rmp-serde = "1.3"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
thiserror = "2.0"
wasm-bindgen = "0.2"
clap = { version = "4.6", features = ["derive"] }
pixels = "0.17"
winit = "0.30"
cpal = "0.17"
crossbeam = "0.8"
ringbuffer = "0.16"
lz4_flex = "0.11"
spin_sleep = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "tracing-log"] }
tracing-appender = "0.2"
anyhow = "1"
indicatif = { version = "0.18", features = ["rayon"] }
panic-message = "0.3"
rayon = "1"
partyboy-core = { path = "partyboy-core", version = "0.1.0" }

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 3
overflow-checks = false

[profile.ci]
inherits = "dev"
opt-level = 1
