[package]
name = "frontend_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
crossbeam = "0.8.1"
eframe = "0.18"
env_logger = "0.9"
flexi_logger = "0.22"
log = "0.4"
log-panics = "2"
gameboy = { path = "../gameboy" }
rfd = "0.9.1"
spin_sleep = "1.1.1"