[package]
name = "frontend_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"
gameboy = { path = "../gameboy" }
rfd = "0.10"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
# wasm-mt = "0.1"
wasm-rs-shared-channel = "0.1.0"



[profile.release]
opt-level = 2 # fast and small wasm