[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
paste = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"
seq-macro = "0.2"
image = "0.23"

[[bench]]
name = "my_benchmark"
path =  "../benches/src/lib.rs"
harness = false

[features]
debug_fetch = []
