[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
paste = "1"
thiserror = "1"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1"

[dev-dependencies]
criterion = "0.4"
seq-macro = "0.3"
image = "0.24"

[[bench]]
name = "my_benchmark"
path =  "../benches/src/lib.rs"
harness = false

[features]
default = []
debug_fetch = []
debug_info = []
web = []
