[package]
name = "gameboy_web"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gameboy = { path = "../gameboy", features = ["web"] }
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
rmp-serde = "1.1.1"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'EventTarget',
    'KeyboardEvent'
]