[package]
name = "partyboy-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
default = []
web = ["dep:wasm-bindgen"]
logging = ["dep:log"]