[package]
name = "partyboy-core-web"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
partyboy-common = { path = "../partyboy-common", features = ["web"] }
console_error_panic_hook = "0.1.7"
partyboy-core = { path = "../partyboy-core", features = ["web"] }
js-sys = "0.3.60"
lz4_flex = { version = "0.9.3", default-features = false, features = ["checked-decode", "safe-encode", "safe-decode"] }
rmp-serde = "1.1.1"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'EventTarget',
    'KeyboardEvent'
]