[package]
name = "partyboy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
paste = "1"
thiserror = "1"
wasm-bindgen = { version = "0.2.83", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.4.1", optional = true }
rmp-serde = { version = "1.1.1", optional = true }

[dev-dependencies]
criterion = "0.4"
seq-macro = "0.3"
image = "0.24"
serde_json = "1"

[features]
default = ["serde"]
debug_fetch = []
debug_info = []
web = [
    "dep:wasm-bindgen", 
    "dep:console_error_panic_hook"
]
serde = [
    "dep:serde",
    "dep:serde-big-array",
    "dep:rmp-serde"
]
gen_bios_snapshot = []

[[bench]]
name = "my_benchmark"
path =  "../benches/src/lib.rs"
harness = false
