[package]
name = "partyboy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
boxarray = "1.3.0"
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"
paste = "1"
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
thiserror = "1"
wasm-bindgen = { version = "0.2.83", optional = true }

[dev-dependencies]
criterion = "0.4"
seq-macro = "0.3"
image = "0.24"
serde_json = "1"

[features]
default = ["serde"]
debug_fetch = []
debug_info = []
web = [
    "dep:wasm-bindgen", 
    "dep:console_error_panic_hook"
]
serde = [
    "dep:serde",
    "dep:serde-big-array",
    "dep:rmp-serde"
]
gen_bios_snapshot = []

[[bench]]
name = "my_benchmark"
path =  "../benches/src/lib.rs"
harness = false
