[package]
name = "partyboy-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
boxarray = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
log = { workspace = true }
paste = { workspace = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-big-array = { workspace = true, optional = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
seq-macro = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["serde"]
debug_fetch = []
debug_info = []
web = [
    "dep:wasm-bindgen", 
    "dep:console_error_panic_hook"
]
serde = [
    "dep:serde",
    "dep:serde-big-array",
    "dep:rmp-serde"
]
gen_bios_snapshot = []
