[package]
name = "partyboy-frontend"
version = "0.1.0"
edition = "2021"
resolver="2"

[[bin]]
name = "partyboy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
clap = "2"
cpal = "0.15.2"
partyboy-common = { path = "../partyboy-common" }
crossbeam = "0.8"
partyboy-core = { path = "../partyboy-core" }
log = "0.4"
log-panics = "2"
log4rs = "1"
lz4_flex = "0.11"
pixels = "0.13"
serde = "1.0"
spin_sleep = "1"
ringbuffer = "0.15"
rmp-serde = "1.1.1"
winit = { version = "0.29.10", features = ["rwh_05"] }
