[package]
name = "partyboy-frontend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "partyboy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
cpal = { workspace = true }
partyboy-common = { path = "../partyboy-common" }
crossbeam = { workspace = true }
partyboy-core = { path = "../partyboy-core" }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
lz4_flex = { workspace = true }
pixels = { workspace = true }
serde = { workspace = true }
spin_sleep = { workspace = true }
ringbuffer = { workspace = true }
rmp-serde = { workspace = true }
winit = { workspace = true }
