[package]
name = "partyboy-mass-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
indicatif = { version = "0.17", features = ["rayon"] }
panic-message = "0.3"
partyboy-core = { path = "../partyboy-core" }
rayon = "1.8"
