[package]
name = "partyboy-mass-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
panic-message = { workspace = true }
partyboy-core = { workspace = true }
rayon = { workspace = true }
