[package]
name = "partyboy-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
partyboy-core = { path = "../partyboy-core", features = ["serde", "gen_bios_snapshot"] }
quick-xml = { version = "0.23", features = [ "serialize" ] }
rmp-serde = "1.1.1"
serde = { version = "1.0", features = [ "derive" ] }