[package]
name = "partyboy"
version = "0.1.0"
edition = "2021"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
env_logger = "0.10"
clap = "2"
cpal = "0.15"
common = { path = "../../common" }
crossbeam = "0.8"
gameboy = { path = "../../core/gameboy", features = [] }
log = "0.4"
log-panics = "2"
log4rs = "1"
lz4_flex = "0.11"
pixels = "0.13"
serde = "1.0"
ringbuffer = "0.15"
rmp-serde = "1.1.1"
winit = "0.27"
winit_input_helper = "0.13"
