[package]
name = "junit_to_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.23", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
clap = { version = "3.2", features = ["derive"] }