[package]
name = "gen_bios_skip_snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
gameboy = { path = "../../partyboy-core", features = ["serde", "gen_bios_snapshot"] }
rmp-serde = "1.1.1"
